# mlibc

./: meson.build  meson_options.txt
.github/workflows/: ci.yml  rust-libc.yml
abis/mlibc/: abi.h
ci/: cykusz.cross-file
options/ansi/generic/: file-io.cpp  signal-stubs.cpp  stdio-stubs.cpp  stdlib-stubs.cpp
options/ansi/include/mlibc/: ansi-sysdeps.hpp
options/elf/generic/: startup.cpp
options/glibc/generic/: getopt-stubs.cpp  stdio_ext-stubs.cpp
options/glibc/include/: getopt.h  stdio_ext.h
options/internal/aarch64/: thread.cpp
options/internal/aarch64-include/mlibc/: thread.hpp
options/internal/gcc/: guard-abi.cpp
options/internal/generic/: essential.cpp
options/internal/include/bits/: types.h
options/internal/include/mlibc/: internal-sysdeps.hpp  lock.hpp  thread.hpp
options/internal/x86_64/: thread.cpp
options/internal/x86_64-include/mlibc/: thread.hpp
options/linux/include/mlibc/: linux-sysdeps.hpp
options/posix/generic/: pthread-stubs.cpp  unistd-stubs.cpp
options/posix/include/mlibc/: posix-sysdeps.hpp
options/rtdl/generic/: linker.cpp  main.cpp
options/rtdl/include/mlibc/: rtdl-sysdeps.hpp
scripts/: gen-cykusz-bindings.sh  rust-libc-config.yml  rust-libc-cykusz.rs
sysdeps/aero/generic/: signals.cpp
sysdeps/cykusz/: meson.build
sysdeps/cykusz/crt-x86_64/: Scrt1.S  crt0.S  crt1.S
sysdeps/cykusz/generic/: cykusz.cpp  entry.cpp  filesystem.cpp  signals.cpp  sockets.cpp  thread.cpp
sysdeps/cykusz/include/abi-bits/: auxv.h  seek-whence.h
sysdeps/cykusz/include/cykusz/: syscall.h  syscall_internal.h
sysdeps/cykusz/include/mlibc/: thread-entry.hpp
sysdeps/cykusz/x86_64/: signals.S
